--- a/src/shared/modules/header/header.component.scss
+++ b/src/shared/modules/header/header.component.scss
@@ -41,7 +41,8 @@
       height: 1.925rem;
       align-self: flex-end;
       border-radius: 5px 5px 0 0;
-      padding: 0 0.25em;
+      padding: 0 0.2em;
+      white-space: nowrap;
       &:first-child {
         margin-left: 3em;
       }
